# position_proposal_estimator

./: CMakeLists.txt  README.md
depth_verification_data/: images.txt  t265-ds-none.yaml  t265-omni-radtan.yaml
include/: calibration_parser.hpp  common_struct.hpp  depth_verification.hpp  depth_verification_cameras.hpp  multiview_geometry.hpp  multiview_visualiser.hpp
params/: cam_calib_est.yaml
src/: depth_verification.cpp  depth_verification_test.cpp  multiview_geometry_test.cpp  multiview_visualiser.cpp
